[tool.poetry]
name = "chesscom-profile-searcher"
version = "0.1.0"
description = ""
authors = ["Swarit Choudhari <swaritchoudhari.p.s.y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"chess.com" = "^1.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
